Kubernetes/03_ingress/ingress_path_based_rules.yaml
apiVersion: networking.k8s.io/v1 
kind: Ingress 
metadata: 
  name: path-based-ingress
  annotations: 
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2 
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /nginx(/|$)(.*)
          pathType: Prefix 
          backend:
            service:
              name: nginx-service
              port: 
                number: 80
        - path: /httpd(/|$)(.*)
          pathType: Prefix 
          backend:
            service:
              name: httpd-service
              port: 
                number: 80
        - path: /(.*)
          pathType: Prefix
          backend:
            service:
              name: nginx-service 
              port:
                number: 80
